<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="133dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageCaminar"
            android:layout_width="221dp"
            android:layout_height="134dp"
            android:layout_weight=".1"
            android:padding="2dp"
            app:srcCompat="@drawable/ic_account"
            tools:srcCompat="@drawable/ic_nuevo_proyecto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="413dp"
        android:layout_height="534dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979">

        <TextView
            android:id="@+id/viewUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_usuario" />

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewUsuario"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_contrasena" />

        <EditText
            android:id="@+id/txtContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:labelFor="@+id/viewContrasena"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_ingresar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_registrar"
            android:textSize="16sp" />
        <Button
            android:id="@+id/btnRegistrarMedico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_registrarMedico"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnVerPacientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pacientes"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnVerMedicos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_medicos"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>